--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" dir="ltr">
 
 <head>
     <!-- Meta -->
@@ -303,7 +303,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="copy-right-section">
-                        <p>Copyright 2023 © <span> CyberPunk.</span> All Right Reserved.</p>
+                        <p>Copyright 2023 © <span> Vatsal Kansagara.</span> All Right Reserved.</p>
                     </div>
                 </div>
             </div>
